fix too much padding

--- a/Public/styles/screen.css
+++ b/Public/styles/screen.css
@@ -284,7 +284,7 @@ pre {
     display: block;
     border: 1px solid #E3EDF3;
     width: 100%;
-    padding: 100px;
+    padding: 10px;
     font-family: 'IBM Plex Mono', monospace, sans-serif;
     font-size: .85em;
     background: #F7FAFB;
